# idle-animation

./: Cargo.toml  README.md
src/: main.rs
