[package]
name = "idle-animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/rsk700/bevy.git", branch = "fix-transform-order-of-transforms", features = ["dynamic"] }
rand = "0.8.4"